# task2771

./: README.md  chat_log.txt  log.txt
cli/: Makefile  chatc
srvr/: Acc.cpp  Acc.h  CMakeLists.txt  Chat.cpp  Chat.h  Logger.cpp  Logger.h  Main.cpp  Makefile  Message.cpp  Message.h  NewUser.cpp  NewUser.h  Server.cpp  Server.h  Socket.cpp  Socket.h  UserRepository.cpp  UserRepository.h  chats  db.cpp  db.h  resource.h
